--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Список Задач</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <title>Замітки</title>
   </head>
-  <body>
-    <div class="wrapper">
-      <input class="input" placeholder="Введите задачу" type="text" />
-      <button class="add" type="submit">Добавить</button>
-      <h3 class="title">Список Задач</h3>
-      <ul class="list"></ul>
+  <body class="bg-dark text-light">
+    <div class="container w-50 pt-5">
+      <h1>Замітки</h1>
+      <input
+        type="text"
+        class="form-control mb-2"
+        placeholder="Введите задачу"
+        id="input"
+      />
+      <button id="add" class="btn btn-outline-info w-100 mb-2">Добавить</button>
+      <ul class="list-group list-group-flush" id="list"></ul>
     </div>
-    <script src="js/app.js"></script>
+    <script src="js/ToDoList.js"></script>
   </body>
 </html>
